# crewai_example

./: README.md  pyproject.toml
src/example/: crew.py  main.py
